# sailfish-connman-plugin-tethering-keepalive

./: CMakeLists.txt  Makefile
rpm/: sailfish-connman-plugin-tethering-keepalive.spec
src/: tethering_keepalive_plugin.c
